test/typechecker.d/invalid/const4.souc.bad
f(i: Integer): Integer = '4'
